--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag pptp:$(date +%s)
+      run: docker build . --file Dockerfile --tag olenahal/pptp-client:$(date +%s)
+
+    - name: Push the Docker image
+      run: docker push olenahal/pptp-client:$(date +%s)  
